    force the old behaviour

  [ Mohammed Adnène Trojette ]
  * debi: add svn-buildpackage support. Thanks to Raphaël Hertzog for
    the patch. (Closes: #315409, #417609)
  * dch: add --bpo support. (Closes: #434183)
  * debcommit: add debian/changelog to the list of files to commit. Thanks
    Damyan Ivanov for the patch. (Closes: #419657)
  * bts: add file:// to local urls. (Closes: #435011)

 -- Mohammed Adnène Trojette <adn+deb@diwi.org>  Sat, 04 Aug 2007 19:03:20 +0200

devscripts (2.10.6) unstable; urgency=low

  [ Adam D. Barratt ]
  * bts
    + Cc bug reports if the control message contains a comment
      (Closes: #429649)
    + Support passing multiple packages / addresses to "bts cache"
      (Closes: #416548)
    + Add archive / unarchive support
    + Make caching of "status mboxes" work again
  * Fix changelog typos (Closes: #429774)
  * debdiff: Sort conffiles and control before comparing them. Thanks to Peter
    Samuelson for the patch (Closes: #421781)
  * tagpending
    + Use tag=pending rather than include=pending (Closes: #430786)
    + Sort bug numbers in numerical order
    + Process bugs that are already tagged pending and closed in the changelog

  [ James Vega ]
  * uupdate:
    + When displaying patch reject files, show the path to the new upstream
      directory where they're contained. (Closes: #419133)
  * uscan:
    + Support https URLs.  This requires installing libcrypt-ssleay-perl.
      (Closes: #423669)
  * debian/control:
    + Add libcrypt-ssleay-perl to Suggests and description for uscan.
  * wnpp:
    + Update the manpage and help output to document what RFA, RFH, and O
      mean.  Also add a pointer to the WNPP website. (Closes: #421872)
  * PackageDeps:
    + Use ||= instead of |= to set the package name in %dep_pkgs.  It is the
      correct way to do things and |= causes odd results on at least amd64.
      (Closes: #419024)

  [ Mohammed Adnène Trojette ]
  * Release.
