@@ -16,6 +16,10 @@ are detected.
 .BR \-\-help ", " \-h
 Show a summary of options.
 .TP
+.BR \-\-newline ", " \-n
+Check for "echo -n" usage (non POSIX but required by Debian Policy 10.4.)
+.TP
+.TP
 .BR \-\-version ", " \-v
 Show version and copyright information.
 .SH "EXIT VALUES"
